# cmake-micromamba

./: .cmake-format.yml  .cmake-linter.yml  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  Micromamba.cmake  README.md
.github/workflows/: Linux.yml  MacOS.yml  Windows.yml
cmake/: FindMicromamba.cmake  Micromamba.cmake
tests/: CMakeLists.txt
tests/FetchContent/: CMakeLists.txt
tests/PreProject/: CMakeLists.txt
tests/Standard/: CMakeLists.txt
tests/Standard/src/: test.cpp
tests/src/: test.cpp
